<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <TextView
            android:id="@+id/BlocksLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caselles"
            android:drawableRight="@drawable/time2"
            android:gravity="center"/>
        <TextView
            android:id="@+id/TimeCounter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/timeleft"
            android:gravity="right"/>
    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="100dp"
        android:gravity="center"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0dp"></GridView>

    <TextView
        android:id="@+id/Contador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuyoponente"
        android:gravity="center"/>

</LinearLayout>